CSS looks like example CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<link rel="stylesheet" type="text/css" href="./style.css" />
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<header>
+
+  <nav>
+    <ul>
+      <img src="https://placehold.it/200x70/ddd" id="logo-pic" />
+      <li><a href="">nav1</a></li>
+      <li><a href="">nav2</a></li>
+      <li><a href="">nav3</a></li>
+      <li><a href="">nav4</a></li>
+    </ul>
+  </nav>
+</header>
+
+<body>
+
+  <img src="https://placehold.it/960x450/ddd" />
+  <article>
+    <img src="https://placehold.it/300x375/ddd" />
+    <img src="https://placehold.it/300x375/ddd" />
+    <img src="https://placehold.it/300x375/ddd" />
+  </article>
+  <article id="row2">
+    <img src="https://placehold.it/480x400/ddd" />
+    <article id="lorem-paragraph">
+      <h1> Header </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec risus ut eros imperdiet vehicula ut cursus
+        est.
+        Nullam malesuada tristique condimentum. Nulla lorem nunc, imperdiet sed erat nec, bibendum dictum mauris.
+        Curabitur ac turpis ante. Nam ante ex, iaculis nec bibendum eu, feugiat quis justo. Nam at neque at nisl
+        placerat
+        porta nec accumsan risus. Curabitur vestibulum non quam ut finibus. Sed faucibus neque tellus, eu venenatis nibh
+        vehicula vel. Morbi quam quam, imperdiet in dignissim non, interdum et est. Pellentesque habitant morbi
+        tristique
+        senectus et netus et malesuada fames ac turpis egestas. Pellentesque at volutpat mi.
+
+        Praesent faucibus venenatis lectus, nec faucibus ante interdum eu. Duis a pretium justo, sed faucibus turpis.
+        Mauris molestie hendrerit libero nec sollicitudin. Vivamus lacinia ultricies luctus. Aenean non cursus odio.
+        Donec
+        tempor imperdiet condimentum. In aliquet mi eu est finibus, et auctor eros malesuada. Quisque id lacinia dui.
+        Vivamus vulputate lectus sed mi ullamcorper condimentum. Aliquam faucibus pretium leo id scelerisque. Duis
+        finibus, felis in vestibulum mattis, ligula arcu egestas nunc, vel venenatis magna purus vitae metus. Fusce
+        luctus
+        ante ex, et feugiat nisl commodo vitae. Ut fringilla finibus tincidunt. Suspendisse in nisi scelerisque,
+        venenatis
+        felis vel, iaculis velit.
+
+        Aliquam a turpis elit. Praesent urna metus, porta eu vehicula eu, iaculis sed velit. Maecenas nec risus sed
+        mauris
+        finibus elementum sit amet vitae dui. Duis ornare maximus orci non tempus. Praesent leo tortor, luctus eget
+        dolor
+        et, pretium imperdiet odio. Maecenas mollis justo et ante porta, vel hendrerit justo tincidunt. Pellentesque
+        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam odio tortor, aliquam
+        vitae neque a, suscipit tristique tortor. Nunc consectetur varius fermentum. Duis accumsan placerat consectetur.
+        Etiam condimentum nulla id metus commodo, vel suscipit urna molestie. Fusce quis arcu diam. Phasellus fermentum
+        pretium sem ut tempor. Aliquam aliquet iaculis ante. Integer vulputate venenatis ante, laoreet blandit ipsum
+        euismod sit amet.
+      </p>
+      <button> Call To Action</button>
+    </article>
+
+  </article>
+</body>
+<footer>
+
+</footer>
+
+</html>
